@@ -7,5 +7,8 @@ pv-visualize-selected=Visualize selected pipe system
 pv-color-by-fluid=Color by fluid
 pv-color-by-system=Color by system
 
+[mod-setting-name]
+pv-overlay-opacity=Overlay opacity
+
 [shortcut-name]
 pv-toggle-overlay=Toggle pipe visualizer overlay
