@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: ????
-  Changes:
+  Features:
+    - Added a per-player setting to adjust overlay opacity. (#19)
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2023-10-14
